tests/parser/error/expr_wrong.out
tests/parser/error/expr_wrong.st:1:10
1 | def a := ___
             ^^^
Error: Expected expression.
